src/test/ui/feature-gates/feature-gate-const_transmute.stderr
error[E0658]: The use of std::mem::transmute() is gated in const fns
  --> $DIR/feature-gate-const_transmute.rs:10:43
   |
LL | const fn transmute_fn() -> u32 { unsafe { mem::transmute(Foo(3)) } }
   |                                           ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/53605
   = help: add `#![feature(const_transmute)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
